--- a/app/views/aboutus.xml
+++ b/app/views/aboutus.xml
@@ -7,7 +7,7 @@
 		<ScrollView  id='profileContentView' >
 				<Label  class='profileContentP' >全部創辦人憑著超過二十年從事旺舖租售代理經驗於2009年9月9日成立。</Label>		
 				<Label  class='profileContentTH' >本公司之專業顧問年資分佈</Label>	
-				<View class='piechart'>
+				<View class='piechart'  height='Ti.UI.SIZE'>
 					<ImageView  image="/images/pie.png" />
 				</View>
 				
@@ -16,13 +16,13 @@
 					<Label  class='profileContentT' >2.收錢者滿意</Label>	
 					<Label  class='profileContentT' >3.代理者滿足</Label>		
 			
-				<View class='theOneInfo'> 
+				<View class='theOneInfo'  height='Ti.UI.SIZE' > 
 					<Label class='companyName'>壹  專  業  旺  舖</Label>	
 					<Label class='companyItem'>香港九龍彌敦道208號四海大廈4樓402室</Label>
 					<Label class='companyItem' >電話 +852 2366 2833</Label>	
 					<Label class='companyItem' >傳真 +852 2366 2811</Label>		
 				</View>
-				<View id='profileBtnSet' >
+				<View id='profileBtnSet' height='Ti.UI.SIZE' >
 					<Button  title="聯絡壹專業" class="profileBtn" id='contact' />
 				</View>    
 				              		
